before i after pseudo elementi 1

--- a/vjezba1.html
+++ b/vjezba1.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="vjezba1.css">
 </head>
 <body>
-    
+    <h1>Demo za ::after selektor</h1>
+    <p>Moje ime je Pero</p>
+    <p>Živim u Osijeku</p>
 </body>
 </html>
