--- a/vjezba4.html
+++ b/vjezba4.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="vjezba4.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor <span> amet consectetur adipisicing elit.</span> Natus, minima autem? At dolorem nostrum, ab maxime ipsa explicabo, laudantium alias nesciunt, rerum similique eaque repudiandae! Laborum itaque inventore temporibus! Ut!</p>
+    <p>Lorem ipsum dolor amet consectetur adipisicing elit. Natus, minima autem? At dolorem nostrum, ab maxime ipsa explicabo, laudantium alias nesciunt, rerum similique eaque repudiandae! Laborum itaque inventore temporibus! Ut!</p>
 </body>
 </html>
